Sqlite DB mit Backend verbunden